--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,13 +10,13 @@ pipeline {
         
         stage('Test') {
             steps {
-                sh 'echo "Testing..."'
+                sh 'echo "Testing... main"'
             }
         }
         
         stage('Deploy') {
             steps {
-                sh 'echo "Deploying..."'
+                sh 'echo "main Deploying..."'
             }
         }
     }
