--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,19 +4,19 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'echo "main branch..."'
+                sh 'echo "dev branch..."'
             }
         }
         
         stage('Test') {
             steps {
-                sh 'echo "Testing..."'
+                sh 'echo "dev... main"'
             }
         }
         
         stage('Deploy') {
             steps {
-                sh 'echo "Deploying..."'
+                sh 'echo "dev Deploying..."'
             }
         }
     }
